--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section id="home">
             <div class="home-content">
-                <img src="profile.jpg" alt="Shantanu Ranit" class="profile-pic">
+                <img src="WhatsApp Image 2025-09-25 at 17.52.12_b1169ab9.jpg" alt="Shantanu Ranit" class="profile-pic">
                 <h1>Shantanu Ranit</h1>
                 <p class="subtitle">Electronics & Telecommunication Engineering Student</p>
                 <a href="#projects" class="btn">View My Work</a>
